force-app/main/default/objects/TR1__Job_Leads__c/fields/BH_Job_Lead_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>BH_Job_Lead_Name_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id,  TR1__Job__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Lead Name</label>
    <type>Text</type>
</CustomField>