force-app/main/default/objects/TR1__Job_Leads__c/fields/Delivery_of_Tutoring__c.field-meta.xml
<CustomField>
    <fullName>Delivery_of_Tutoring__c</fullName>
    <label>Delivery of Tutoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>