force-app/main/default/objects/TR1__Job_Leads__c/fields/Location_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Delivery__c</fullName>
    <label>Location of Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Location_of_Delivery</valueSetName>
    </valueSet>
</CustomField>