force-app/main/default/objects/TR1__Job_Leads__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <label>Programme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programme</valueSetName>
    </valueSet>
</CustomField>